# 5IMI_RECO_3D

./: .gitignore  CMakeLists.txt  nuage.ply  nuage.xyz  nuage1.ply  nuage2.ply  nuage2.xyz  nuage_6_7.ply  nuage_all.ply  nuage_all_1.ply  nuage_all_2.ply  nuage_all_amphore.ply  nuage_all_fleur.ply  nuage_fleur.ply  nuage_samurai.ply
src/: HSV_image.cpp  Point_Image.cpp  Point_Image.hpp  Point_Mire.cpp  Point_Mire.hpp  ProgressBar.cpp  ProgressBar.hpp  feature_location.cpp  feature_location.hpp  features_extraction.cpp  features_extraction.hpp  grid_creation.cpp  grid_creation.hpp  main.cpp  points_detection.cpp  points_detection.hpp  registration.cpp  registration.hpp  segmentation.cpp  segmentation.hpp  utils.cpp  utils.hpp
